--- a/style.css
+++ b/style.css
@@ -69,3 +69,16 @@ textarea{
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+
+#currentDay {
+  width: 600px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  background-color: magenta;
+  border-radius: 7px;
+  justify-content: center;
+  color: greenyellow;
+  font-family: 'Control One', sans-serif;
+  font-size: 2em;
+}
