--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
-  flex: 1;
+  text-align: center;
 }
 
 .saveBtn i:hover {
@@ -93,10 +93,10 @@ textarea{
 }
 
 .time {
-  
+  text-align: center;
 }
 
 .event {
-  
+  text-align: center;
 }
 
